# dracula

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build_release.yml  release.yml
cdracula/: Cargo.toml
cdracula/src/: lib.rs  util_macros.rs
cdracula/tests/: test_capi.rs
dracula/src/: count.rs  langs.rs  lib.rs  parse.rs
pydracula/: Cargo.toml
pydracula/src/: lib.rs
pydracula/tests/: test.py  test.rs
src/: count.rs  langs.rs  lib.rs  parse.rs  tests.rs
src/fixtures/: more_python_tests.py  more_python_tests_golden.py  python_tests.py  python_tests_golden.py  rust_tests.rs
src/langs/: c.rs  csharp.rs  java.rs  js.rs  jsx.rs  mod.rs  python.rs  ruby.rs  rust.rs  scala.rs
src/parse/: mod.rs  v1.rs  v2.rs
