[workspace]
members = ["cdracula", "pydracula"]

[workspace.package]
edition = "2021"
description = "🧛 Count-ing lines, AH AH AHH!"
version = "0.2.0-1"
authors = ["Swarnim Arun <swarnim@deepsource.io>"]
license-file = "LICENSE"
documentation = "https://docs.rs/dracula"
homepage = "https://github.com/deepsourcelabs/dracula"
repository = "https://github.com/deepsourcelabs/dracula"
keywords = ["parsing", "line-count"]
categories = ["command-line-utilities", "text-processing"]


[package]
name = "dracula"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ra_ap_syntax = "0.0.149"
pretty_assertions = "1.3.0"
letr = "0.2.1"

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-sitter-java = "0.20.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-typescript = "0.20.2"
tree-sitter-python = "0.20.2"
tree-sitter-ruby = "0.20.0"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-c = "0.20.2"
tree-sitter-cpp = "0.20.0"
tree-sitter-go = "0.19.1"
tree-sitter-scala = { git = "https://github.com/tree-sitter/tree-sitter-scala", rev = "7d348f51e442563f4ab2b6c3e136dac658649f93" }
tree-sitter-kotlin = { git = "https://github.com/swarnimarun/tree-sitter-kotlin", branch = "add-field-name" }

[dependencies.log]
version = "0.4"
optional = true

[features]
log = ["dep:log"]
cli = ["log"]
