[package]
name = "cdracula"
description = "🧛 Count-ing lines, AH AH AHH!"
version = "0.1.0"
authors = ["Swarnim Arun <swarnim@deepsource.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dracula = { path = ".." }