[package]
name = "pydracula"
version = "0.1.2"
authors = ["Swarnim Arun <swarnimarun11@gmail.com>"]
edition = "2018"

[lib]
name = "pydracula"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.0"
features = ["abi3-py37", "extension-module"]

[dependencies]
dracula = { path = ".." }