[package]
name = "pydracula"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
name = "pydracula"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.0"
features = ["abi3-py37", "extension-module"]

[dependencies]
dracula = { path = ".." }